--- a/ErabliereIU/src/index.html
+++ b/ErabliereIU/src/index.html
@@ -19,6 +19,8 @@
   <link rel="apple-touch-icon" sizes="152x152" href="/assets/apple/apple-touch-icon-152x152.png" />
   <link rel="apple-touch-icon" sizes="180x180" href="/assets/apple/apple-touch-icon-180x180.png" />
 
+  <link href="https://api.mapbox.com/mapbox-gl-js/v3.7.0/mapbox-gl.css" rel="stylesheet">
+
   <link rel="apple-touch-startup-image" href="/assets/apple/launch.png">
   <meta name="apple-mobile-web-app-title" content="ÉrablièreIU">
   <meta name="apple-mobile-web-app-capable" content="yes">
@@ -26,5 +28,7 @@
 </head>
 <body>
   <app-root></app-root>
+
+  <script src="https://api.mapbox.com/mapbox-gl-js/v3.7.0/mapbox-gl.js"></script>
 </body>
 </html>
