--- a/ErabliereIU/src/index.html
+++ b/ErabliereIU/src/index.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html lang="fr">
+
 <head>
   <meta charset="utf-8">
   <title>ÉrablièreIU</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="ÉrablièreIU est une application offrant des fonctionnalités pour surveiller et documenter les érablières.">
-  
+  <meta name="description"
+    content="ÉrablièreIU est une application offrant des fonctionnalités pour surveiller et documenter les érablières.">
+
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 
   <link rel="apple-touch-icon" href="/assets/apple/apple-touch-icon.png" />
@@ -25,10 +27,111 @@
   <meta name="apple-mobile-web-app-title" content="ÉrablièreIU">
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
+
+  <style>
+    .whitescreen {
+      display: none;
+      /* do not display on start */
+      z-index: -1000;
+      /* move behind app-root */
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      width: 400px;
+      max-width: 100%;
+      -webkit-box-shadow: 0px 0px 20px 0px #ccc;
+      -moz-box-shadow: 0px 0px 20px 0px #ccc;
+      box-shadow: 0px 0px 20px 0px #ccc;
+      font-size: 14px;
+    }
+
+    .whitescreen p {
+      margin: 0;
+    }
+
+    .whitescreen-top {
+      background: #1976d2;
+      color: #fff;
+      padding: 20px;
+    }
+
+    .whitescreen-icon {
+      font-size: 30px;
+      padding-bottom: 20px;
+    }
+
+    .whitescreen-message {
+      line-height: 20px;
+    }
+
+    .whitescreen-email {
+      padding-top: 20px;
+    }
+
+    .whitescreen-bottom {
+      padding: 20px;
+    }
+
+    .whitescreen-bottom p {
+      font-size: 10px;
+      background: #fff;
+      color: #000;
+    }
+  </style>
 </head>
+
 <body>
   <app-root></app-root>
 
+  <!-- No javascript message -->
+  <noscript>Javascript must be enabled to continue</noscript>
+
   <script src="https://api.mapbox.com/mapbox-gl-js/v3.10.0/mapbox-gl.js"></script>
+
+  <!-- White screen error message -->
+  <div id="whitescreen" class="whitescreen">
+    <div class="whitescreen-top">
+      <p class="whitescreen-icon">:-(</p>
+      <p class="whitescreen-message">
+        Désolé, il semble que l'application ErabliereIU ne fonctionne pas sur votre appareil.
+      </p>
+    </div>
+    <div class="whitescreen-bottom">
+      <p id="whitescreen-stack"></p>
+    </div>
+  </div>
+
+  <!-- White screen error handling -->
+  <script>
+    var WHITESCREEN_EMPTY_APP_ROOT_DELAY = 8000;
+    var WHITESCREEN_ERROR_DELAY = 5000;
+
+    // Show white screen error
+    function showWhitescreenError(error) {
+      console.error(error);
+      var whitescreen = document.getElementById("whitescreen");
+      if (whitescreen.style.display !== "block") {
+        document.getElementById("whitescreen-stack").innerHTML = error.stack.replace(/\n/g, '<br/>');
+        whitescreen.style.display = "block";
+        document.body.style.display = "block"; // only for ionic
+      }
+    }
+
+    // Handle global errors
+    window.addEventListener("error", function (event) {
+      setTimeout(() => {
+        showWhitescreenError(event.error);
+      }, WHITESCREEN_ERROR_DELAY);
+    });
+
+    // Detect empty app-root
+    setTimeout(function () {
+      if (!document.getElementsByTagName("app-root")[0].children.length) {
+        showWhitescreenError(new Error("Empty app-root"));
+      }
+    }, WHITESCREEN_EMPTY_APP_ROOT_DELAY);
+  </script>
 </body>
+
 </html>
