map in ip info page and better mapping of nmap xml

--- a/ErabliereIU/src/index.html
+++ b/ErabliereIU/src/index.html
@@ -130,6 +130,7 @@
       }
     }, WHITESCREEN_EMPTY_APP_ROOT_DELAY);
   </script>
+  <script src="https://api.mapbox.com/mapbox-gl-js/v3.10.0/mapbox-gl.js"></script>
 </body>
 
 </html>
