updates and add test on map page

--- a/ErabliereIU/src/index.html
+++ b/ErabliereIU/src/index.html
@@ -110,7 +110,7 @@
       console.error(error);
       var whitescreen = document.getElementById("whitescreen");
       if (whitescreen.style.display !== "block") {
-        document.getElementById("whitescreen-stack").innerHTML = error.stack.replace(/\n/g, '<br/>');
+        document.getElementById("whitescreen-stack").innerHTML = error?.stack?.replace(/\n/g, '<br/>');
         whitescreen.style.display = "block";
         document.body.style.display = "block"; // only for ionic
       }
